# site/api/swagger.json
@@ -52,6 +52,10 @@
         {
             "name": "Dados Mentais",
             "description": "Endpoints para manipulação de dados mentais dos usuários"
+        },
+        {
+            "name": "Meditação",
+            "description": "Endpoints para manipulação de dados de meditação dos usuários"
         }
         
     ],
@@ -208,17 +212,7 @@
             "security": [{"bearerAuth": []}],
             "responses": {
                 "200": {
-                    "description": "Lista de dados físicos retornada com sucesso",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/components/schemas/DadosFisicos"
-                                }
-                            }
-                        }
-                    }
+                    "description": "Lista de dados físicos retornada com sucesso"
                 },
                 "500": {
                     "description": "Erro ao processar a requisição"
@@ -279,14 +273,7 @@
             },
             "responses": {
                 "201": {
-                    "description": "Dados físicos cadastrados com sucesso",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/DadosFisicos"
-                            }
-                        }
-                    }
+                    "description": "Dados físicos cadastrados com sucesso"
                 },
                 "400": {
                     "description": "Dados inválidos"
@@ -360,14 +347,7 @@
             },
             "responses": {
                 "201": {
-                    "description": "Dados mentais cadastrados com sucesso",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/DadosMentais"
-                            }
-                        }
-                    }
+                    "description": "Dados mentais cadastrados com sucesso"   
                 },
                 "400": {
                     "description": "Dados inválidos"
@@ -381,5 +361,82 @@
 
 
         
+    },
+    "/meditacao": {
+        "get": {
+            "tags": ["Meditação"],
+            "summary": "Endpoint para listar dados de meditação",
+            "responses": {
+                "200": {
+                    "description": "Lista de dados de meditação retornada com sucesso"
+                },
+                "500": {
+                    "description": "Erro ao processar a requisição"
+                }
+            }
+        }
+        
+        
+        
+    },
+    "/diario": {
+        "get": {
+            "tags": ["Diário"],
+            "summary": "Endpoint para listar entradas do diário",
+            "security": [{"bearerAuth": []}],
+            "responses": {
+                "200": {
+                    "description": "Lista de entradas do diário retornada com sucesso"
+                },
+                "500": {
+                    "description": "Erro ao processar a requisição"
+                }
+            }
+        },
+        "put":{
+            "tags": ["Diário"],
+            "summary": "Endpoint para atualizar uma entrada do diário",
+            "security": [{"bearerAuth": []}],
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "required": true,
+                    "schema": {
+                        "type": "integer"
+                    }
+                }
+            ],
+            "requestBody": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "exercicio_feitos": {
+                                    "type": "string",
+                                    "description": "Exercícios feitos"
+                                },
+                                "copos_bebidos": {
+                                    "type": "integer",
+                                    "description": "Número de copos de água bebidos"
+                                }
+                        }
+                    }
+                }
+            },
+            "responses": {
+                "200": {
+                    "description": "Entrada do diário atualizada com sucesso"
+                },
+                "400": {
+                    "description": "Dados inválidos"
+                },
+                "404": {
+                    "description": "Entrada do diário não encontrada"
+                }
+            }
+        }
     }
-}}
+}}}
